apps/base/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-svc
  namespace: home-assistant
spec:
  selector:
    app: home-assistant
  ports:
  - protocol: TCP
    port: 8123
    targetPort: 8123
